--- a/digi-shop/src/package.json
+++ b/digi-shop/src/package.json
@@ -13,9 +13,11 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@preline/overlay": "^3.0.0",
         "@tailwindcss/vite": "^4.1.1",
         "preline": "^3.0.1",
         "tailwindcss": "^4.1.1",
+        "toastify-js": "^1.12.0",
         "vanilla-calendar-pro": "^3.0.3"
     },
     "devDependencies": {
