--- a/digi-shop/src/requirements.txt
+++ b/digi-shop/src/requirements.txt
@@ -1,10 +1,18 @@
 asgiref==3.8.1
 Django==5.2
+django-countries==7.6.1
 django-js-asset==3.1.2
 django-mptt==0.17.0
+django-phonenumber-field==8.1.0
 django_vite_plugin==4.1.0
+jalali_core==1.0.0
+jdatetime==5.2.0
+phonenumbers==9.0.6
 pillow==11.2.1
 psycopg2-binary==2.9.10
+pyotp==2.9.0
 python-dotenv==1.1.0
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.14.0
 tzdata==2025.2
