--- a/digi-shop/src/requirements.txt
+++ b/digi-shop/src/requirements.txt
@@ -1,4 +1,13 @@
+amqp==5.3.1
 asgiref==3.8.1
+billiard==4.2.1
+celery==5.5.3
+celery-stubs==0.1.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
 Django==5.2
 django-countries==7.6.1
 django-js-asset==3.1.2
@@ -7,12 +16,19 @@ django-phonenumber-field==8.1.0
 django_vite_plugin==4.1.0
 jalali_core==1.0.0
 jdatetime==5.2.0
+kombu==5.5.4
+packaging==25.0
 phonenumbers==9.0.6
 pillow==11.2.1
+prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 pyotp==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+redis==6.2.0
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.13
