--- a/digi-shop/nginx/nginx.conf
+++ b/digi-shop/nginx/nginx.conf
@@ -4,21 +4,21 @@ server {
     client_max_body_size 100M;
 
     location /static/ {
-        alias /src/staticfiles/;
+        alias /usr/src/staticfiles/;
     }
 
     location /media/ {
-        alias /src/media/;
+        alias /usr/src/media/;
     }
 
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://django:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    access_log /src/logs/nginx-access.log;
-    error_log /src/logs/nginx-error.log;
+    access_log /usr/src/logs/nginx-access.log;
+    error_log /usr/src/logs/nginx-error.log;
 }
