--- a/digi-shop/src/requirements.txt
+++ b/digi-shop/src/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.8.1
 billiard==4.2.1
 celery==5.5.3
 celery-stubs==0.1.3
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
@@ -13,22 +15,31 @@ django-countries==7.6.1
 django-js-asset==3.1.2
 django-mptt==0.17.0
 django-phonenumber-field==8.1.0
+django-rosetta==0.10.2
 django_vite_plugin==4.1.0
+gunicorn==23.0.0
+idna==3.10
 jalali_core==1.0.0
 jdatetime==5.2.0
 kombu==5.5.4
+mypy==1.16.1
+mypy_extensions==1.1.0
 packaging==25.0
+pathspec==0.12.1
 phonenumbers==9.0.6
 pillow==11.2.1
+polib==1.2.0
 prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 pyotp==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 redis==6.2.0
+requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
