--- a/loan-management-system/compose.yml
+++ b/loan-management-system/compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - '5433:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
     networks:
       - django_network
     environment:
@@ -64,7 +64,7 @@ services:
       - ./.env
     command: redis-server --requirepass ${REDIS_PASSWORD:-12345678}
     volumes:
-      - redis_data:/data
+      - ./data/redis:/data
 
 volumes:
   postgres_data:
