--- a/loan-management-system/src/requirements.txt
+++ b/loan-management-system/src/requirements.txt
@@ -12,7 +12,7 @@ jdatetime==5.0.0
 packaging==23.2
 phonenumbers==8.13.27
 polib==1.2.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.10
 python-dotenv==1.0.0
 redis==5.0.1
 requests==2.31.0
