--- a/digi-shop/.env.example
+++ b/digi-shop/.env.example
@@ -1,11 +1,14 @@
 # -----------------------------------------------------------------------------
 # Django Settings
 # -----------------------------------------------------------------------------
+DJANGO_DEBUG=your_debug_value
+DJANGO_SUPERUSER_USERNAME=your_superuser_username
+DJANGO_SUPERUSER_EMAIL=your_superuser_email
+DJANGO_SUPERUSER_PASSWORD=your_superuser_password
+DJANGO_ALLOWED_HOSTS=your_allowed_hosts
+DJANGO_SETTINGS_MODULE=your_settings_module
+DJANGO_DEFAULT_FROM_EMAIL=your_default_from_email
 DJANGO_SECRET_KEY=your_secret_key
-DJANGO_SETTINGS_MODULE=core.settings.development
-DJANGO_DEBUG=True
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-DJANGO_DEFAULT_FROM_EMAIL=no-reply@example.com
 
 # -----------------------------------------------------------------------------
 # Database Configuration
@@ -17,10 +20,23 @@ DB_HOST=your_database_host
 DB_PORT=your_database_port
 
 # -----------------------------------------------------------------------------
-# Caching with Redis
+# Redis
 # -----------------------------------------------------------------------------
 REDIS_HOST=your_redis_host
 REDIS_PORT=your_redis_port
+REDIS_PASSWORD=your_redis_password
+
+# -----------------------------------------------------------------------------
+# PG Admin
+# -----------------------------------------------------------------------------
+PGADMIN_DEFAULT_EMAIL=your_pgadmin_email
+PGADMIN_DEFAULT_PASSWORD=your_pgadmin_password
+
+# -----------------------------------------------------------------------------
+# Flower settings
+# -----------------------------------------------------------------------------
+FLOWER_PORT=your_flower_port
+FLOWER_BASIC_AUTH=your_flower_basic_auth
 
 # -----------------------------------------------------------------------------
 # Email Configuration
@@ -29,5 +45,5 @@ EMAIL_HOST=your_email_host
 EMAIL_PORT=your_email_port
 EMAIL_HOST_USER=your_email_host_user
 EMAIL_HOST_PASSWORD=your_email_host_password
-EMAIL_USE_TLS=True_or_False
-EMAIL_USE_SSL=True_or_False
+EMAIL_USE_TLS=your_email_use_tls
+EMAIL_USE_SSL=your_email_use_ssl
