--- a/digi-shop/compose.yml
+++ b/digi-shop/compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - '5433:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
     networks:
       - django_network
     environment:
@@ -69,6 +69,7 @@ services:
     networks:
       - nginx_network
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./src/staticfiles/:/usr/src/staticfiles
       - ./src/media/:/usr/src/media
       - ./src/logs/:/usr/src/logs
@@ -76,7 +77,7 @@ services:
       - django
 
   redis:
-    image: redis:latest
+    image: redis
     container_name: redis
     restart: always
     ports:
@@ -87,7 +88,7 @@ services:
       - ./.env
     command: redis-server --requirepass ${REDIS_PASSWORD:-12345678}
     volumes:
-      - redis_data:/data
+      - ./data/redis:/data
 
   celery:
     build:
